--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <input type="password" placeholder="Contraseña" />
       </div>
 
-      <!-- <div class="form-group">
+      <div class="form-group">
         <select>
           <option value="Comprador">Comprador</option>
           <option value="Vendedor">Vendedor</option>
           <option value="Administrador">Administrador</option>
         </select>
-      </div> -->
+      </div>
 
       <input type="submit" value="Enviar" />
     </form>
